[package]
name = "certspook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["alloc"] }
libbpf-rs = "0.21.1"
libc = "0.2.147"
plain = "0.2.3"
rustls = { version = "0.21.5", features = ["log", "logging", "tls12", "dangerous_configuration", "quic"] }
time = { version = "0.3.23", features = ["alloc", "std", "local-offset"] }
trust-dns-resolver = "0.22.0"
x509-parser = "0.15.0"

[build-dependencies]
libbpf-cargo = "0.21.1"

